--- a/ezyzip/src/Components/Sidebar.css
+++ b/ezyzip/src/Components/Sidebar.css
@@ -8,12 +8,12 @@ body {
   .sidemenu {
     
     display: flex;
-    flex-direction: column; 
+    flex-direction: column; /* Ensure flex items stack vertically */
     height: 100%;
-    width: 340px;
+    width: 250px;
    
-    background-color: #00194F; 
-    color: #fff; 
+    background-color: #00194F; /* Blue background color */
+    color: #fff; /* White text color */
     
     
     
@@ -24,7 +24,7 @@ body {
     flex-direction: column; 
     width:86px;
     height: 100%;
-    background-color: #00194F; 
+    background-color: #00194F; /* Blue background color */
     color: #fff;
     transition: width 0.5s ease-in-out;
   }
@@ -35,7 +35,7 @@ body {
  
   
   .top-section {
-    background-color: #00194F; 
+    background-color: #00194F; /* Adjust the top section color */
     color: #fff;
     
     text-align: center;
@@ -80,7 +80,7 @@ body {
     display: flex;
     align-items: center;
     
-    color: #fff; 
+    color: #fff;
     text-decoration: none;
     background-color: #00194F;
     
@@ -124,7 +124,7 @@ body {
   }
   
   .ayhaja {
-    padding:10px 10px;
+    padding:8px 8px;
     color:#fff;
     background-color: #00194F;
     text-decoration: none;
@@ -209,7 +209,38 @@ body {
   .subicon{
     position: relative;
    
-   font-size: 20px;
+   font-size: 22px;
   } 
   
+  
+  
+ 
+  
+
+
+
+
+
+
+
+
+
+
+  
+
+    
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
   
