--- a/ezyzip/src/Pages/Addemployee.css
+++ b/ezyzip/src/Pages/Addemployee.css
@@ -2,6 +2,10 @@
    
     background-color: #EAEDEF;
     display: flex;
-  } .sidebarf{
-    width:300px;
+  } 
+  .contentf {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
   }
+  
