--- a/ezyzip/src/Pages/Employeelist.css
+++ b/ezyzip/src/Pages/Employeelist.css
@@ -1,13 +1,11 @@
-.container {
+.containere {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
 
-    background-color: #EAEDEF;
-    display: flex;
-  } .header{
-    background-color: #fff;
-  }
-  
-  
-  /* Style for the sidebar */
- 
-  /* Style for the content area (Header and Usertable) */
- 
+.contente {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
