--- a/ezyzip/src/Components/Usertable.css
+++ b/ezyzip/src/Components/Usertable.css
@@ -48,7 +48,7 @@
     border: none;
     outline: none;
     font-weight: 600;
-  
+    
     font-size: 15px;
     
   }
@@ -108,7 +108,7 @@
     text-align: center;
     border-bottom: 1px solid #ddd;
     background-color: #fff;
-    
+  
    
   }
   
@@ -122,8 +122,8 @@
   
   
   .lastcolumn {
-    width: 300px;
-    height: 38px;
+    width: 100%;
+    
     display: flex;
    
     background-color: #fff;
@@ -165,5 +165,13 @@
 
 
 
+
+
+
+
+
+
+  
+  
 
 
