--- a/ezyzip/src/Components/Usertable.css
+++ b/ezyzip/src/Components/Usertable.css
@@ -87,7 +87,7 @@
 
   .tableu {
     background-color:#fff;
-   
+   font-size: 19px;
     position: relative;
     top:20px;
     margin-top: 70px;
