--- a/ezyzip/src/Pages/login.css
+++ b/ezyzip/src/Pages/login.css
@@ -1,3 +1,21 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700 &display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'poppins',sans-serif;
+    -webkit-font-smoothing : antialiased;
+    -moz-osx-font-smoothing : grayscale;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #ffffffa1;
+    
+}
 .wrapper{
     width: 580px;
     height: 400px;
