--- a/ezyzip/src/Components/Sidebar.css
+++ b/ezyzip/src/Components/Sidebar.css
@@ -9,7 +9,7 @@ body {
     
     display: flex;
     flex-direction: column; /* Ensure flex items stack vertically */
-     height: 780px;
+     height: 100%;
     width: 250px;
    
     background-color: #00194F; /* Blue background color */
