--- a/ezyzip/src/Components/Formulaire.css
+++ b/ezyzip/src/Components/Formulaire.css
@@ -16,8 +16,8 @@
   flex-direction: column;
   gap:30px;
   padding-bottom: 100px;
-  padding-left: 4%;
-  padding-right:4%;
+  padding-left: 2%;
+  padding-right:2%;
  
  
  
@@ -78,7 +78,7 @@ margin: 23px 0;
   justify-self: center;
  background-color: #F7F7F7;
 
- 
+ margin: 0 2%;
   
   height: 400px;
   padding: 30px 50px ;
