--- a/ezyzip/src/Components/Motif.css
+++ b/ezyzip/src/Components/Motif.css
@@ -35,17 +35,23 @@ background-color: #fff;
 color:#1E2648;
 }
 
-.motif input{
-background-color: #999999 20%;
+.resizable-textarea{
+background-color: #F7F7F7;
 border: none;
-width: 482px;
-height: 167px;
+width: 480px;
+
+height:167px;
+
 border-radius: 5px;
 
-padding-left: 30px;
+padding: 25px;
 outline: none;
 font-size: 23px;
 font-weight: 400;
+resize: none; /* Allow both vertical and horizontal resizing */
+  overflow: auto;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
 
 
 }
