--- a/ezyzip/src/Components/Deleteuser.css
+++ b/ezyzip/src/Components/Deleteuser.css
@@ -6,28 +6,53 @@ position:fixed;
 top:0;
 left:0;
 display: flex;
+flex-direction: column;
 justify-content: center;
 align-items: center;
 
 
 
 
+}.vv{
+
+font-size: 22px;
+background-color: #fff;
+margin: 50px 25px;
+
+
 }
 
 
 .btnsd{
-    display: flex;
-   
-    gap :8px;
-   
+   display: flex;
+   flex-direction: column;
     width:535px;
-    height:350px;
+    height:240px;
     background-color: #fff;
     border-radius: 10px;
+  position: relative;
+
+
+
   
-   position: relative;
+  }.bi{
+    background-color: #fff;
+    display: flex;
+   
+    margin:30px;
+   gap: 10px;
+    position: absolute;
+    right:0;
+    bottom: 0;
+
+
+  }
   
-  }.b1{
+  
+  
+  
+  
+  .b1{
     width:80px;
     height:35px;
     border-color: #999999;
@@ -38,10 +63,8 @@ align-items: center;
     font-weight: 600;
     color:#999999;
     cursor: pointer;
-    position :absolute;
-    margin:20px;
-   right:120px;
-    bottom: 0;
+    
+   
   
   }.b2{
     width:100px;
@@ -54,8 +77,7 @@ align-items: center;
     font-size: 15px;
     font-weight: 600;
     cursor: pointer;
-    position :absolute;
-    margin:20px;
-    right:0;
-    bottom: 0;
+   
+   
+  
   }
